# demo-string-splitter

./: .gitignore  CMakeLists.txt  README.md  input-content.cpp  input-content.hpp  main.cpp
input-data/: ab.txt  bc.txt  cd.txt
